prevent content jump on articles

--- a/layouts/partials/article/article.scss
+++ b/layouts/partials/article/article.scss
@@ -14,6 +14,12 @@
         max-width: 100%;
         max-height: none;
         margin: 0 0 var(--spacing-y);
+
+        img {
+            max-height: none;
+            width: 100%;
+            height: auto;
+        }
     }
 
     &__title {
